--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Tree::Parser.
 
+0.12 ???
+    - Now also accepts objects stringifying to file path's
+      ending in '.tree', e.g., for use with Path::Class
+      - including tests
+
 0.11 Tues May 31, 2005
     - fixed RT Bug# 13041 thanks to Gerd for the 
       solution
