--- a/Changes
+++ b/Changes
@@ -1,10 +1,9 @@
 Revision history for Perl extension Tree::Parser.
 
 0.12 Monday May 21, 2007
-    - added handling for files which are not named
-      *.tree
+    - added handling for files which are not named *.tree
     - Now also accepts objects stringifying to file path's
-      ending in '.tree', e.g., for use with Path::Class
+      for use with Path::Class
       - including tests
 
 0.11 Tues May 31, 2005
